--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,9 +1,3 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{{.Title}}</title>
-</head>
-<body>
+{{ define "main" }}
     {{ partial "content.html" . }}
-</body>
-</html>
+{{ end }}
