--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>{{ partial "title-item.html" . }}{{ .Site.Title }}</title>
         {{ partial "style.html" "scss/style.scss" }}
+        {{ partial "style.html" "css/highlight.css" }}
     </head>
     <body>
         {{ block "main" . }}{{ end }}
