--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -5,6 +5,7 @@
         <title>{{ partial "title-item.html" . }}{{ .Site.Title }}</title>
         {{ partial "style.html" "scss/style.scss" }}
         {{ partial "style.html" "css/highlight.css" }}
+        {{ partial "style.html" "css/font-awesome.css" }}
     </head>
     <body>
         {{ block "main" . }}{{ end }}
