--- a/layouts/partials/content-details.html
+++ b/layouts/partials/content-details.html
@@ -1,9 +1,11 @@
 {{ if not .Date.IsZero }}
-    <span title='{{ .Date.Format "January 2 2006" }}'>{{ .Date.Format "2006-01-02" }}</span>
+    <span class="pr-2" title='{{ .Date.Format "January 2 2006" }}'>
+        <i class="far fa-calendar-alt pr-1>"></i>{{ .Date.Format "2006-01-02" }}
+    </span>
 {{ end }}
 
 {{ if .Params.tags }}
     {{ range $1, $e := .Params.tags }}
-        <a href="/tags/{{ urlize . }}">#{{ . }}</a>
+        <a class="mr-1" href="/tags/{{ urlize . }}">#{{ . }}</a>
     {{ end }}
 {{ end }}
