--- a/layouts/partials/list_item.html
+++ b/layouts/partials/list_item.html
@@ -1,7 +1,9 @@
-<div class="media-body">
-    <a href="{{ .RelPermalink }}">
-        <h5>{{ .Title }}</h5>
-    </a>
-    <small>{{ partial "content-details.html" . }}</small>
-    <p>{{ partial "summary.html" . }}</p>
+<div class="media list-page-item mb-3" data-id="{{ .File.UniqueID }}">
+    <div class="media-body">
+        <a href="{{ .RelPermalink }}">
+            <h5 class="my-0">{{ .Title }}</h5>
+        </a>
+        <small>{{ partial "content-details.html" . }}</small>
+        <p>{{ partial "summary.html" . }}</p>
+    </div>
 </div>
