--- a/static/src/scss/style.scss
+++ b/static/src/scss/style.scss
@@ -7,6 +7,7 @@ $paragraph-margin-bottom: $headings-margin-bottom * 0.85;
 
 @import "node_modules/bootstrap/scss/bootstrap";
 
+$navbar-height: 40px;
 $body-color: $gray-300;
 
 html, body {
