--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -3,7 +3,8 @@
   <a class="navbar-brand" href="{{ ref . "/" }}">
     <code>/home/{{ lower .Site.Title }}</code>
   </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav"
+    aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
