Improve single design

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,3 +1,7 @@
 {{ define "main" }}
-    {{ partial "content.html" . }}
+    <div id="main">
+        <div class="container">
+            {{ partial "content.html" . }}
+        </div>
+    </div>
 {{ end }}
