Improve content details design

--- a/layouts/partials/content-details.html
+++ b/layouts/partials/content-details.html
@@ -1,11 +1,25 @@
 {{ if not .Date.IsZero }}
-    <span class="pr-2" title='{{ .Date.Format "January 2 2006" }}'>
-        <i class="far fa-calendar-alt pr-1>"></i>{{ .Date.Format "2006-01-02" }}
+  <span class="pr-2" title='{{ .Date.Format "January 2 2006" }}'>
+    <i class="far fa-calendar-alt pr-1 content-detail"></i> {{ .Date.Format "2006-01-02" }}
+  </span>
+{{ end }}
+
+{{ if not .Parent.IsHome }}
+  {{ if gt .ReadingTime 2 }}
+    <span class="pr-2" title='Reading time'>
+      <i class="far fa-clock pr-1 content-detail"></i> {{ .ReadingTime }} minutes
     </span>
+  {{ end }}
+  <span class="pr-2" title="Word count">
+    <i class="far fa-file-alt pr-1 content-detail"></i> {{ .WordCount }} words
+  </span>
 {{ end }}
 
 {{ if .Params.tags }}
-    {{ range $1, $e := .Params.tags }}
-        <a class="mr-1" href="/tags/{{ urlize . }}">#{{ . }}</a>
-    {{ end }}
+  <a href="{{ ref . " /tags" }}" class="no-color-change mr-1">
+    <i class="fas fa-tags small content-detail"></i>
+  </a>
+  {{ range $i, $e := .Params.tags }}
+    <a href="/tags/{{ urlize . }}" class="mr-1">#{{ . }}</a>
+  {{ end }}
 {{ end }}
