--- a/layouts/partials/content.html
+++ b/layouts/partials/content.html
@@ -12,7 +12,7 @@
 
     <div class="content mt-3">
         {{ if .TableOfContents }}
-            <div class="float-1g-right ml-lg-3 mb-3 p-3">
+            <div class="float-lg-end ml-lg-3 mb-3 p-3">
                 {{ .TableOfContents }}
             </div>
         {{ end }}
