Add content language meta

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <meta http-equiv="Content-Language" content="{{ .Site.Language.Lang }}">
         {{ partial "style.html" "scss/style.scss" }}
         {{ partial "style.html" "css/highlight.css" }}
         {{ partial "style.html" "css/font-awesome.css" }}
