--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -7,6 +7,8 @@
         {{ partial "style.html" "css/highlight.css" }}
         {{ partial "style.html" "css/font-awesome.css" }}
 
+        {{ partial "favicon.html" }}
+
         <title>{{ partial "title-item.html" . }}{{ .Site.Title }}</title>
     </head>
     <body>
