--- a/layouts/partials/content.html
+++ b/layouts/partials/content.html
@@ -1,6 +1,12 @@
 
 {{ if .Params.image }}
-  <img class="mb-3 header-image" src='{{ .Params.image }}' />
+  {{ .Scratch.Set "image" .Params.image }}
+  {{ if hasPrefix .Params.image "resource:" }}
+    {{ $resource := .Resources.GetMatch (replace .Params.image "resource:" "") }}
+    {{ .Scratch.Set "image" ($resource.Resize "2000x").RelPermalink }}
+  {{ end }}
+
+  <img class="mb-3 header-image" src='{{ .Scratch.Get "image" }}' />
 {{ end }}
 
 <h1 class="display-4">{{ .Title }}</h1>
