--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,7 @@
 {{ define "main" }}
   <div id="main">
     <div class="container">
+      {{ partial "header_image.html" . }}
       {{ partial "content.html" . }}
     </div>
   </div>
