Add head_extra block - Sometiems it's nice to be able to extend the head, for cases like   adding stylesheets, etc.

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -10,6 +10,8 @@
     {{ partial "favicon.html" }}
 
     <title>{{ partial "title-item.html" . }}{{ .Site.Title }}</title>
+
+    {{ block "head_extra" . }}{{ end }}
   </head>
   <body>
     {{ partial "navbar.html" . }}
