Make it possible to easily add sources

--- a/layouts/partials/content.html
+++ b/layouts/partials/content.html
@@ -21,5 +21,17 @@
       {{ end }}
     {{ end }}
     {{ .Content }}
+
+
+    <div id="sources">
+      {{ if .Params.Sources }}
+        <h2>Sources</h2>
+        <ul>
+        {{ range $i, $e := .Params.Sources }}
+          <li>{{ markdownify $e }}</li>
+        {{ end }}
+        </ul>
+      {{ end }}
+    </div>
   </div>
 {{ end }}
