Make the message variable in gandalf_forbid layout

--- a/layouts/_default/gandalf_forbid.html
+++ b/layouts/_default/gandalf_forbid.html
@@ -5,7 +5,7 @@
 {{ define "main" }}
   <div id="main" class="wrapper_forbid">
     <h1>{{ .Title }}</h1>
-    <p>You shall not pass!</p>
+    <p>{{ .Content }}</p>
 
     <svg
       viewbox="0 0 100 150"
