--- a/layouts/partials/list_item.html
+++ b/layouts/partials/list_item.html
@@ -1,9 +1,18 @@
-<div class="media list-page-item mb-3" data-id="{{ with .File}}{{ .File.UniqueID }}{{ end }}">
-  <div class="media-body">
-    <a href="{{ .RelPermalink }}">
-      <h5 class="my-0">{{ .Title }}</h5>
-    </a>
-    <small>{{ partial "content-details.html" . }}</small>
-    <p>{{ partial "summary.html" . }}</p>
-  </div>
-</div>
+<!-- Obtain "dateformat" from scratchpad (or fall back to default) -->
+{{ if not (.Scratch.Get "dateformat") }}
+{{ .Scratch.Set "dateformat" "Jan 02, 2006" }}
+{{ end }}
+{{ $dateformat := .Scratch.Get "dateformat" }}
+<!-- Reset scratchpad for next use (in next page) - avoids using old values -->
+{{ .Scratch.Set "dateformat" nil }}
+
+
+<a class="item-link" href="{{ .RelPermalink }}">
+    <span class="item-title">{{ .Title }}</span>
+    {{ if not .Date.IsZero }}
+    <span class="item-day">{{ .Date.Format $dateformat }}</span>
+    {{ end }}
+</a>
+<small class="item-details">{{ partial "content-details.html" . }}</small>
+<!-- TODO: Only show summary on hover? -->
+<p class="item-summary">{{ partial "summary.html" . }}</p>
