--- a/layouts/_default/_markup/render-heading.html
+++ b/layouts/_default/_markup/render-heading.html
@@ -1,1 +1,3 @@
-<h{{ .Level }} id="{{ .Anchor | safeURL }}"> <a class="anchor" href="#{{ .Anchor | safeURL }}">#</a> {{ .Text | safeHTML}}</h{{ .Level }}>
+<h{{ .Level }} id="{{ .Anchor | safeURL }}">
+    <a class="anchor" href="#{{ .Anchor | safeURL }}">#</a> {{ .Text | safeHTML}}
+</h{{ .Level }}>
