--- a/layouts/_default/_markup/render-image.html
+++ b/layouts/_default/_markup/render-image.html
@@ -3,12 +3,13 @@
 {{ $resource := .Page.Resources.GetMatch $destination }}
 
 {{ if $resource }}
-  {{ $destination = ($resource.Resize "1500x webp").RelPermalink }}
+{{ $destination = ($resource.Resize "1500x webp").RelPermalink }}
 {{ end }}
 
 <figure class="text-center">
-  <img src="{{ $destination | safeURL }}" alt="{{ .Text | plainify }}" style='max-width: {{ default "90" .Title }}%;' referrerpolicy="no-referrer" loading="lazy" decoding="async" />
-  <figcaption class="text-center">
-    <small>{{ .Text }}</small>
-  </figcaption>
+    <img src="{{ $destination | safeURL }}" alt="{{ .Text | plainify }}" style='max-width: {{ default "90" .Title }}%;'
+        referrerpolicy="no-referrer" loading="lazy" decoding="async" />
+    <figcaption class="text-center">
+        <small>{{ .Text }}</small>
+    </figcaption>
 </figure>
