--- a/layouts/_default/gandalf_forbid.html
+++ b/layouts/_default/gandalf_forbid.html
@@ -1,48 +1,40 @@
 {{ define "head_extra" }}
-    {{ partial "style.html" "scss/forbid_style.scss" }}
+{{ partial "style.html" "scss/forbid_style.scss" }}
 {{ end }}
 
 {{ define "main" }}
-  <div id="main" class="wrapper_forbid">
+<div id="main" class="wrapper_forbid">
     <h1>{{ .Title }}</h1>
     <p>{{ .Content }}</p>
 
-    <svg
-      viewbox="0 0 100 150"
-      preserveAspectRatio="xMidYMid slice"
-      height="720" width="480"
-    >
+    <svg viewbox="0 0 100 150" preserveAspectRatio="xMidYMid slice" height="720" width="480">
 
-      <path class="grid-lines__line grid-lines__line--hor" d="m0,39 l100,0" />
-      <path class="grid-lines__line grid-lines__line--hor" d="m0,75 l100,0" />
-      <path class="grid-lines__line grid-lines__line--hor" d="m0,111 l100,0" />
-      <path class="grid-lines__line grid-lines__line--ver" d="m14,0 l0,150" />
-      <path class="grid-lines__line grid-lines__line--ver" d="m32,0 l0,150" />
-      <path class="grid-lines__line grid-lines__line--ver" d="m50,0 l0,150" />
-      <path class="grid-lines__line grid-lines__line--ver" d="m68,0 l0,150" />
-      <path class="grid-lines__line grid-lines__line--ver" d="m86,0 l0,150" />
-      <path class="grid-lines__line grid-lines__line--diag" d="m14,0 l72,150" />
-      <path class="grid-lines__line grid-lines__line--diag" d="m0,25 l100,100" />
-      <path class="grid-lines__line grid-lines__line--diag" d="m100,25 l-100,100" />
-      <path class="grid-lines__line grid-lines__line--diag" d="m86,0 l-72,150" />
-      <path class="grid-lines__line grid-lines__line--cir"
-        d="m50,57 c18,0 18,18 18,18
+        <path class="grid-lines__line grid-lines__line--hor" d="m0,39 l100,0" />
+        <path class="grid-lines__line grid-lines__line--hor" d="m0,75 l100,0" />
+        <path class="grid-lines__line grid-lines__line--hor" d="m0,111 l100,0" />
+        <path class="grid-lines__line grid-lines__line--ver" d="m14,0 l0,150" />
+        <path class="grid-lines__line grid-lines__line--ver" d="m32,0 l0,150" />
+        <path class="grid-lines__line grid-lines__line--ver" d="m50,0 l0,150" />
+        <path class="grid-lines__line grid-lines__line--ver" d="m68,0 l0,150" />
+        <path class="grid-lines__line grid-lines__line--ver" d="m86,0 l0,150" />
+        <path class="grid-lines__line grid-lines__line--diag" d="m14,0 l72,150" />
+        <path class="grid-lines__line grid-lines__line--diag" d="m0,25 l100,100" />
+        <path class="grid-lines__line grid-lines__line--diag" d="m100,25 l-100,100" />
+        <path class="grid-lines__line grid-lines__line--diag" d="m86,0 l-72,150" />
+        <path class="grid-lines__line grid-lines__line--cir" d="m50,57 c18,0 18,18 18,18
           c0,18 -18,18 -18,18
           c-18,0 -18,-18 -18,-18
           c0,-18 18,-18 18,-18" />
-      <path class="grid-lines__line grid-lines__line--cir"
-        d="m50,39 c36,0 36,36 36,36
+        <path class="grid-lines__line grid-lines__line--cir" d="m50,39 c36,0 36,36 36,36
           c0,36 -36,36 -36,36
           c-36,0 -36,-36 -36,-36
           c0,-36 36,-36 36,-36" />
-      <path class="grid-lines__line grid-lines__line--cir"
-        d="m50,21 c54,0 54,54 54,54
+        <path class="grid-lines__line grid-lines__line--cir" d="m50,21 c54,0 54,54 54,54
           c0,54 -54,54 -54,54
           c-54,0 -54,-54 -54,-54
           c0,-54 54,-54 54,-54" />
 
-      <path class="wiz wiz--hair-bg"
-        d="m50,48
+        <path class="wiz wiz--hair-bg" d="m50,48
           c0,0 6,0 6,2
           c0,0 0,3 2,3
           c0,0 2,0 2,4
@@ -62,15 +54,13 @@
           c0,0 2,0 2,-3
           c0,0 6,0 6,-2" />
 
-      <path class="wiz wiz--head"
-        d="m50,50
+        <path class="wiz wiz--head" d="m50,50
           c0,0 8,0 8,10
           c0,0 0,10 -8,10
           c0,0 -8,0 -8,-10
           c0,0 0,-10 8,-10" />
 
-      <path class="wiz wiz--hair"
-        d="m50,48
+        <path class="wiz wiz--hair" d="m50,48
           c0,0 6,0 6,2
           c0,0 0,3 2,3
           c0,0 2,0 2,4
@@ -90,8 +80,7 @@
           c0,0 0,-6 -4,-3" />
 
 
-      <path class="wiz wiz--hair"
-        d="m50,52
+        <path class="wiz wiz--hair" d="m50,52
           c0,0 -6,-4 -6,4
           c0,0 0,4 -2,4
           c0,0 0,4 -2,4
@@ -111,8 +100,7 @@
           c0,0 -1,0 0,-4
           c0,0 2,1 8,-1" />
 
-      <path class="wiz wiz--beard"
-        d="m50,69
+        <path class="wiz wiz--beard" d="m50,69
           c0,0 5,0 5,-1
           c0,0 4,0 4,2
           c0,0 2,0 1,4
@@ -135,15 +123,13 @@
           c0,0 0,-4 2,-4
           c0,0 0,1 6,1" />
 
-      <path class="wiz wiz--mouth"
-        d="m50,65
+        <path class="wiz wiz--mouth" d="m50,65
           c0,0 5,0 5,3
           c0,0 0,2 -5,2
           c0,0 -5,0 -5,-2
           c0,0 0,-4 5,-3" />
 
-      <path class="wiz wiz--mustache"
-        d="m50,64
+        <path class="wiz wiz--mustache" d="m50,64
           c0,0 4,0 4,1
           c0,0 2,0 2,2
           c0,0 2,0 1,3
@@ -159,34 +145,29 @@
           c0,0 -2,-3 1,-3
           c0,0 -1,-5 6,-2" />
 
-      <path class="wiz wiz--eye wiz--left"
-        d="m45,60
+        <path class="wiz wiz--eye wiz--left" d="m45,60
           c0,0 2,0 2,1
           c0,0 0,1 -2,0
           c0,0 -1,0 0,-1" />
 
-      <path class="wiz wiz--eye wiz--right"
-        d="m52,60
+        <path class="wiz wiz--eye wiz--right" d="m52,60
           c0,0 1,-1 2,0
           c0,0 0,1 -2,1
           c0,0 -1,0 0,-1" />
 
-      <path class="wiz wiz--eye-brow wiz--left"
-        d="m42,61
+        <path class="wiz wiz--eye-brow wiz--left" d="m42,61
           c0,0 0,-3 1,-3
           c0,0 3,0 4,2
           c0,0 -1,-1 -4,-1
           c0,0 -1,0 -1,2" />
 
-      <path class="wiz wiz--eye-brow wiz--right"
-        d="m51,60
+        <path class="wiz wiz--eye-brow wiz--right" d="m51,60
           c0,0 2,-3 4,-3
           c0,0 2,0 2,3
           c0,0 -1,-2 -2,-2
           c0,0 -2,0 -4,2" />
 
-      <path class="wiz wiz--sword"
-        d="m50,30
+        <path class="wiz wiz--sword" d="m50,30
           c0,0 2,2 2,6
           l0,50
           l6,0
@@ -209,8 +190,7 @@
           c0,0 0,-3 2,-6
           z" />
 
-      <path class="wiz wiz--staff"
-        d="m46,30
+        <path class="wiz wiz--staff" d="m46,30
           l2,0
           c0,0 1,0 1,1
           l0,2
@@ -234,5 +214,5 @@
           c0,0 -1,0 -1,-4
           c0,0 0,-3 1,-3" />
     </svg>
-  </div>
+</div>
 {{ end }}
