--- a/layouts/shortcodes/youtube.html
+++ b/layouts/shortcodes/youtube.html
@@ -1,7 +1,3 @@
-<iframe
-    class="youtube-embed"
-    src="https://www.youtube-nocookie.com/embed/{{ .Get 0 }}"
-    frameborder="0"
+<iframe class="youtube-embed" src="https://www.youtube-nocookie.com/embed/{{ .Get 0 }}" frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-    allowfullscreen
-></iframe>
+    allowfullscreen></iframe>
