Improve TODO comment

--- a/layouts/posts/list.html
+++ b/layouts/posts/list.html
@@ -1,7 +1,12 @@
 {{ define "main" }}
 <div id="main">
     <div class="container">
-        <!-- Total posts, total words, link to tag list page, RSS -->
+        <!-- TODO:
+            - Mention total post amt
+            - Total words across posts
+            - link to tag list page (and maybe remove link from content-details),
+            - Link for Hugo generated RSS
+        -->
 
         <div class="item-list">
             {{ partial "content.html" . }}
