--- a/static/src/scss/style.scss
+++ b/static/src/scss/style.scss
@@ -227,7 +227,7 @@ img {
     .item-list-item {
         border-bottom: 1px grey dashed;
 
-        .item-link {
+        .item-name {
             display: flex;
             justify-content: space-between;
             align-items: baseline;
