--- a/static/src/scss/style.scss
+++ b/static/src/scss/style.scss
@@ -1,4 +1,8 @@
 $primary: #E85537;
+$primary-light: #FF773D;
+$primary-lighter: #F19143;
+$primary-yellow: #FFB238;
+$primary-red: #B20600;
 $body-bg: #17181C;
 $footer-height: 110px;
 $font-size-base: 1.2rem;
