--- a/static/src/scss/style.scss
+++ b/static/src/scss/style.scss
@@ -219,6 +219,9 @@ img {
         font-size: 2em;
         border-right: 2px solid rgba(255, 255, 255, 0.4);
         padding-right: 0.8em;
+        a {
+            color: $primary-light;
+        }
     }
 
     .item-list-items {
