--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -11,7 +11,7 @@
                 <ul class="item-list-items">
                     {{ range .Pages.ByTitle }}
                     <li class="item-list-item" data-id="{{ with .File}}{{ .File.UniqueID }}{{ end }}">
-                        {{ partial "list_item.html" . }}
+                        {{ partial "list_item.html" (dict "context" . "dateformat" "Jan 02, 2006") }}
                     </li>
                     {{ end }}
                 </ul>
