--- a/static/src/scss/style.scss
+++ b/static/src/scss/style.scss
@@ -19,23 +19,11 @@ $font-size-base: 1.2rem;
 
 @import "node_modules/bootstrap/scss/bootstrap";
 
-@import url('https://rsms.me/inter/inter.css');
-@font-face {
-  font-style: normal;
-  font-family: "JetBrains Mono";
-  font-display: swap;
-  src: local("JetBrains Mono"),
-       local("JetBrains-Mono"),
-       url("../lib/JetBrainsMono/web/woff2/JetBrainsMono-Regular.woff2") format("woff2"),
-       url("../lib/JetBrainsMono/web/woff/JetBrainsMono-Regular.woff") format("woff"),
-       url("../lib/JetBrainsMono/web/eot/JetBrainsMono-Regular.eot") format("embedded-opentype"),
-       url("../lib/JetBrainsMono/ttf/JetBrainsMono-Regular.ttf") format("truetype");
-};
-
 $navbar-height: 40px;
 $body-color: $gray-300;
 
 
+@import "fonts";
 @import "chroma";
 @import "main";
 @import "navbar";
