Use same color of inline code as codeblocks

--- a/static/src/scss/style.scss
+++ b/static/src/scss/style.scss
@@ -8,7 +8,7 @@ $primary-yellow: #FFB238;
 $primary-red: #B20600;
 
 $inline-code-color: #E2777A;
-$inline-code-background: #3B3D42;
+$inline-code-background: #272822;
 $codeblock-background: #272822;
 
 $navbar-height: 40px;
