--- a/static/src/scss/_main.scss
+++ b/static/src/scss/_main.scss
@@ -103,3 +103,9 @@ img {
         }
     }
 }
+
+#changelog {
+  font-family: $font-family-mono;
+  font-size: $font-size-base * 0.9;
+  font-weight: 400;
+}
