Add styling to sources section

--- a/static/src/scss/_main.scss
+++ b/static/src/scss/_main.scss
@@ -104,7 +104,7 @@ img {
     }
 }
 
-#changelog {
+#changelog, #sources {
   font-family: $font-family-mono;
   font-size: $font-size-base * 0.9;
   font-weight: 400;
