Move sources and changelog to it's own partial

--- a/layouts/partials/content.html
+++ b/layouts/partials/content.html
@@ -31,33 +31,9 @@
 
     {{ .Content }}
 
-
-    <div id="sources">
-        {{ if .Params.Sources }}
-        <h2>Sources</h2>
-        <ul>
-            {{ range $i, $e := .Params.Sources }}
-            <li>{{ markdownify $e }}</li>
-            {{ end }}
-        </ul>
-        {{ end }}
-    </div>
-    <div id="changelog">
-        {{ if .Params.Changelog }}
-        <h2> Changelog</h2>
-        <ul class="changelog-time">
-            {{ range $i, $e := .Params.Changelog }}
-            <li>
-                {{ time $i | time.Format "2006-01-02" }}:
-                <ul>
-                    {{ range $c := $e }}
-                    <li>{{ markdownify $c }}</li>
-                    {{ end }}
-                </ul>
-            </li>
-            {{ end }}
-        </ul>
-        {{ end }}
-    </div>
+    {{ if or .Params.Sources .Params.Changelog }}
+    <hr>
+    {{ partial "content-info.html" . }}
+    {{ end }}
 </div>
 {{ end }}
