Group inner content of pages under <article>

--- a/layouts/partials/content.html
+++ b/layouts/partials/content.html
@@ -29,7 +29,7 @@
     {{ end }}
     {{ end }}
 
-    {{ .Content }}
+    <article>{{ .Content }}</article>
 
     {{ if or .Params.Sources .Params.Changelog }}
     <hr>
