--- a/static/src/scss/_main.scss
+++ b/static/src/scss/_main.scss
@@ -110,7 +110,7 @@ img {
     margin-bottom: 0.3rem;
   }
 
-  #changelog, #sources {
+  .changelog, .sources {
     font-family: $font-family-mono;
     font-size: $font-size-base * 0.9;
     font-weight: 400;
