Use .Inner instead of .Get 'text' in span shortcode

--- a/layouts/shortcodes/span.html
+++ b/layouts/shortcodes/span.html
@@ -1,1 +1,1 @@
-<span {{ with .Get "style" }} style="{{ . | safeCSS }}" {{ end }}>{{ .Get "text" }}</span>
+<span {{ with .Get "style" }} style="{{ . | safeCSS }}" {{ end }}>{{ .Inner }}</span>
