Add site description meta tag

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Language" content="{{ .Site.Language.Lang }}">
+    <meta name="description" content="My personal webpage and blog about programming, privacy, and other tech-related stuff.">
     {{ partial "style.html" "scss/style.scss" }}
     {{ partial "style.html" "css/font-awesome.css" }}
 
