--- a/layouts/shortcodes/mermaid.html
+++ b/layouts/shortcodes/mermaid.html
@@ -1,8 +1,12 @@
 {{ $mermaidData := dict "theme" "default" }}
 {{ $data := dict "code" .Inner "mermaid" $mermaidData }}
+{{ $imgsrc := "https://mermain.ink/img/{{ $data | jsonify | base64Encode }}"}}
 
 <figure class="mermaid">
-    <img src="https://mermaid.ink/img/{{ $data | jsonify | base64Encode }}" referrerpolicy="no-referrer">
+    <img src="{{ $imgsrc }}" referrerpolicy="no-referrer" style="object-fit: scale-down;"
+        {{ if .Get "width" }}width='{{ .Get "width" }}' {{ end }}
+        {{ if .Get "height" }}height='{{ .Get "height" }}' {{ end }}
+    >
     <figcaption class="text-center">
         <small>{{ .Get "caption" }}</small>
     </figcaption>
